# neural-rs

./: Cargo.toml
examples/graph/: event.rs  main.rs  train.rs
examples/mnist/: main.rs
src/: array.rs  cost.rs  dense.rs  derivative.rs  initialisers.rs  lib.rs  network.rs  optimise.rs  train.rs  tuple.rs
src/activation/: mod.rs  relu.rs  sigmoid.rs  softmax.rs  tanh.rs
src/cost/: mod.rs  mse.rs
src/optimise/: adam.rs  mod.rs  sgd.rs
src/rnn/: mod.rs
