[package]
name = "linear-networks"
version = "0.1.0"
authors = ["Conrad Ludgate <conradludgate@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.14"
num-traits = "0.2"
rand = "0.8"
# statrs = "0.13"
rand_distr = "0.4"

[dev-dependencies]
nom = "6.0"
indicatif = "0.15"

tui = "0.13"
termion = "1.5"
